solved all the issues on mobile and desktop about us

--- a/client/src/components/about-us/AboutUs.css
+++ b/client/src/components/about-us/AboutUs.css
@@ -145,6 +145,7 @@
   color: var(--primary-text-color);
   margin: 0;
   padding: 0;
+  padding-top: 1vh;
   transition: color 0.5s ease-in-out;
 }
 
@@ -537,7 +538,7 @@ button {
   }
 
   .aboutus-mobile {
-    height: 100vh;
+    height: 101vh;
     display: flex;
     justify-content: space-evenly;
   }
@@ -624,7 +625,7 @@ button {
   }
 
   .storia-text h2 {
-    padding-top: 8vh;
+    padding-top: 5vh;
     font-size: 2.7rem;
     padding-left: 7%;
   }
@@ -634,6 +635,7 @@ button {
     padding-left: 7%;
     max-width: 67vw;
     font-weight: 200;
+    padding-bottom: 5vh;
   }
 
   .window {
